<resources>
    <string name="app_name">jetpack</string>
    <string name="refresh_time">Refresh Time</string>
    <string name="start_timer">start timer</string>
    <string name="stop_timer">stop timer</string>
    <string name="mvvm">MVVM</string>
    <string name="navigation">Navigation</string>
    <string name="view_model">ViewModel</string>
    <string name="live_data">LiveData</string>
    <string name="room">Room</string>
    <string name="data_binding">DataBinding</string>
    <string name="work_manager">WorkManager</string>
    <string name="paging">Paging</string>
    <string name="life_cycle">LifeCycle</string>
    <string name="deep_link">DeepLink</string>
    <string name="insert_student">Insert a student</string>
    <string name="update_student">Update the youngest student</string>
    <string name="delete_student">Delete the oldest student</string>
    <string name="query_student">Query how many student in Database</string>
    <string name="check_student">Check student for more info</string>
    <string name="refresh_student">Refresh Student</string>
    <string name="refresh">Refresh</string>
    <string name="start_work">Start work</string>
    <string name="cancel_work">Cancel work</string>
    <string name="camerax">CameraX</string>
    <string name="hilt">Hilt</string>
    <string name="ktx">KTX</string>
    <string name="coroutines">Coroutines</string>
    <string name="jetpack_compose">Jetpack Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>